uyg1 son düzeltme kaldı

--- a/uygulama1/index.html
+++ b/uygulama1/index.html
@@ -8,7 +8,42 @@
 </head>
 
 <body>
-    çalışma
+    <header>
+        <a href="#">
+            <img src="img/logo.png" alt="logo"></a>
+            <section class="sign-in">
+                <a href="#">Login</a> <b>|</b>
+                <a href="#">Register</a>
+            </section>
+    </header>
+
+    <nav class="sticky">
+        <a href="#">Home</a>
+        <a href="#">Courses</a>
+        <a href="#">Prices</a>
+        <a href="#">Contact</a>
+    </nav>
+
+    <nav class="banner">
+        <img src="img/banner.jpg" alt="">
+        <section class="hero">
+            <h2>Hi, There!</h2>
+            <h3>Your Freelancer is here</h3>
+            <button>Get Detail</button>
+        </section>
+    </nav>
+
+    <main>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit voluptas ducimus dolore ab sit. Earum maxime laboriosam repudiandae distinctio magnam, minus quidem molestias, ut sed voluptates nulla ex beatae impedit molestiae deleniti harum tempora aliquid illum velit! Eligendi iusto, possimus officia obcaecati porro aliquam, sequi veniam nulla voluptas doloremque id.</p>
+
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias laudantium temporibus, nulla pariatur accusamus, hic nemo cumque laboriosam delectus quidem facere ipsam dolores minus corrupti reiciendis modi mollitia sed exercitationem! Perspiciatis amet velit nam veniam minima ipsam hic unde deleniti, voluptates cum voluptas adipisci dolorem ex earum totam laudantium? Labore laboriosam vero, sit odit cumque eos optio! Cupiditate amet autem quisquam quod cumque dolores ab odio inventore deserunt laboriosam eius, voluptate rerum saepe ratione eos quis debitis error magni provident. Porro, ratione in! Tempore officiis velit nulla, laborum dicta possimus illum maiores magnam obcaecati quam earum, consectetur, dolor ut molestiae!</p>
+
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores laudantium tempora illum aut quo illo doloribus magni temporibus. Quidem beatae expedita fugiat dolores! Error nam natus consequuntur enim porro? Veniam officia veritatis vero at maxime quam dolore ipsum minus enim, eius illum consequatur nobis autem? Iste non magni, quo, quia minus molestiae ex accusantium enim perspiciatis et dignissimos dolore. Voluptatum asperiores non voluptas dolor rerum illo numquam blanditiis, quae, nihil, ab cum quia maxime harum minus perferendis. Atque repudiandae ea dolorum saepe animi qui nemo facilis natus odit quasi eligendi totam similique libero, dolores quia dolor corporis eveniet, maxime nisi reprehenderit veniam excepturi. Iusto iure voluptatibus voluptas praesentium esse est harum aliquid explicabo, ut perferendis molestias fuga impedit. Voluptates provident fugit dicta. A inventore perspiciatis optio quae reiciendis dolore placeat, dignissimos esse quod, dicta sapiente explicabo eveniet ratione suscipit reprehenderit harum expedita maxime sed. Autem, facilis exercitationem. Incidunt molestias id odit repellat, similique aperiam qui iste doloremque voluptates ipsam ullam fuga, molestiae quo in reprehenderit hic at, consequatur modi amet architecto tempora atque. Quos perferendis perspiciatis debitis asperiores vel hic repudiandae incidunt possimus, odit in pariatur dolorum unde aliquid expedita officia, laudantium iusto quae harum. Porro omnis maxime minus dolore!</p>
+    </main>
     
+    navbar sticky yap 
+    
+    ve alta buton ekle
+
 </body>
 </html>
